# Predictive-Maintenance-with-Machine-Learning

./: .gitignore  main.ipynb  main.py  pyproject.toml  requirements.txt
